Fix whitespacing of footer buttons. Add whitespace between header and block-level attachments.

--- a/src/content/css/mixins/content-structure.less
+++ b/src/content/css/mixins/content-structure.less
@@ -275,6 +275,9 @@
     }
 
     // Stacked attachments
+    .content-attachments-stacked {
+        margin-top: 1em;
+    }
     .content-attachments-stacked .content-attachment-link {
         min-height: 88px;
         border-bottom: 1px solid #111;
@@ -394,12 +397,8 @@
             background-position: -24px 0;
         }
 
-        .hub-content-action {
-            margin-left: 10px;
-        }
-
-        .hub-content-action:first-child {
-            margin-left: 0px;
+        .hub-btn.hub-content-action:first-child {
+            margin-left: -10px;
         }
         
         .hub-content-action-favorite {
